--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,3 +43,41 @@ SMTP_PASS=pysoajurfcwavdfn
 FROM_EMAIL=kadambhakti0219@gmail.com
 FROM_NAME=FashionX
 CLIENT_URL=http://localhost:3000
+
+# N8N Webhook URLs
+N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/image-edit
+
+# Card-specific webhooks (optional)
+TAJ_MAHAL_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/taj-mahal
+RAJASTHAN_ROYAL_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/rajasthan-royal
+MUMBAI_STREET_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/mumbai-street
+GOA_BEACH_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/goa-beach
+
+# Category-based webhooks
+# Product Type webhooks
+PRODUCT_TYPE_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/product-type
+PRODUCT_TYPE_SARI_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/product-type/sari
+PRODUCT_TYPE_LEHENGA_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/product-type/lehenga
+PRODUCT_TYPE_KURTA_SET_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/product-type/kurta-set
+
+# Scene/Location webhooks
+SCENE_LOCATION_AMBIENCE_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/scene-location
+SCENE_LOCATION_AMBIENCE_TAJ_INSPIRED_PALATIAL_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/scene/taj-palatial
+SCENE_LOCATION_AMBIENCE_LUXURY_HOTEL_SUITE_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/scene/luxury-hotel
+SCENE_LOCATION_AMBIENCE_URBAN_STREET_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/scene/urban-street
+
+# Shot Style webhooks
+SHOT_STYLE_USE_CASE_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/shot-style
+SHOT_STYLE_USE_CASE_HERO_BANNER_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/shot-style/hero-banner
+SHOT_STYLE_USE_CASE_LOOKBOOK_FULL_BODY_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/shot-style/lookbook
+
+# Mood/Genre webhooks
+MOOD_GENRE_FINISHES_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/mood-genre
+MOOD_GENRE_FINISHES_CINEMATIC_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/mood/cinematic
+MOOD_GENRE_FINISHES_HIGH_FASHION_EDITORIAL_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/mood/high-fashion
+
+# Target Channel webhooks
+TARGET_CHANNEL_PRESETS_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/target-channel
+TARGET_CHANNEL_PRESETS_AMAZON_FLIPKART_LISTING_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/channel/amazon-flipkart
+TARGET_CHANNEL_PRESETS_SHOPIFY_PDP_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/channel/shopify
+TARGET_CHANNEL_PRESETS_INSTAGRAM_FEED_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/channel/instagram-feed
