--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -26,7 +27,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "jest": "^29.7.0",
