--- a/backend/.env.example
+++ b/backend/.env.example
@@ -47,6 +47,11 @@ CLIENT_URL=http://localhost:3000
 # N8N Webhook URLs
 N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/image-edit
 
+# Video Generation Webhook URLs
+TEXT_TO_VIDEO_WEBHOOK_URL=https://n8n.srv859998.hstgr.cloud/webhook/text-to-video
+IMAGE_TO_VIDEO_WEBHOOK_URL=https://n8n.srv859998.hstgr.cloud/webhook/image-to-video
+SPEECH_TO_VIDEO_WEBHOOK_URL=https://n8n.srv859998.hstgr.cloud/webhook/speech-to-video
+
 # Card-specific webhooks (optional)
 TAJ_MAHAL_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/taj-mahal
 RAJASTHAN_ROYAL_PHOTOSHOOT_N8N_WEBHOOK=https://your-n8n-instance.com/webhook/rajasthan-royal
