--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^7.2.0",
@@ -28,6 +29,8 @@
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
